# orecchiette-fpv-drone-analog-rs

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  WORKFLOW-ANALOG.md
.github/workflows/: asan.yml  ci.yml  mutants.yml
src/: bands.rs  ddc.rs  demod.rs  detector.rs  frame_history.rs  gpu.rs  levels.rs  lib.rs  scanner.rs  synthetic.rs  types.rs  vbi.rs  video.rs
src/shaders/: ddc_decimate.wgsl
tests/: detection_test.rs  gpu_equivalence.rs
