[package]
name = "orecchiette-fpv-drone-analog-rs"
license = "GPL-3.0-or-later"
version = "0.1.3"
edition = "2024"
description = "Analog FPV drone video signal detection via FM demodulation and spectral sync-pulse analysis."
repository = "https://github.com/isaacbentley/orecchiette-fpv-drone-analog-rs"
readme = "README.md"
keywords = ["fpv", "drone", "detection", "sdr", "fm"]
categories = ["science", "algorithms"]

[dependencies]
rustfft = "6.2"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.10"
rayon = "1"
log = "0.4"

